--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ click==8.0.1
 discord-webhook==0.14.0
 flake8==3.9.2
 Flask==2.0.1
+gunicorn==20.1.0
 idna==2.10
+importlib-metadata==4.11.3
 isort==5.8.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
@@ -30,7 +32,10 @@ slack-webhook==1.0.6
 toml==0.10.2
 tornado==6.1
 tweepy==3.10.0
+typed-ast==1.5.2
+typing_extensions==4.1.1
 tzlocal==2.1
 urllib3==1.26.5
 waitress==2.1.1
 Werkzeug==2.0.1
+zipp==3.8.0
